--- a/arch/riscv/Makefile.arch
+++ b/arch/riscv/Makefile.arch
@@ -1,9 +1,9 @@
 
-CFLAGS += -I${src_tree}/arch/${ARCH}/include
-LDFLAGS+= -T ${src_tree}/arch/${ARCH}/riscv.lds
-
+CFLAGS  += -mcmodel=medany -I${src_tree}/arch/${ARCH}/include
+LDFLAGS += -T ${src_tree}/arch/${ARCH}/riscv.lds
 BOARD_TARGET := ${src_tree}/arch/${ARCH}/Image
 export BOARD_TARGET
 
-${BOARD_TARGET}: kconfig_sync hosttool_compile
+PHONY += board_compile
+board_compile: kconfig_sync hosttool_compile
 	$Q${MAKE} -C ${src_tree}/arch/${ARCH} -f ${src_tree}/arch/${ARCH}/scripts/Makefile
