kbuild: add uapi asm generated target and clean some files

--- a/arch/riscv/Makefile.arch
+++ b/arch/riscv/Makefile.arch
@@ -5,5 +5,5 @@ BOARD_TARGET := ${src_tree}/arch/${ARCH}/Image
 export BOARD_TARGET
 
 PHONY += board_compile
-board_compile: kconfig_sync hosttool_compile
+board_compile: kconfig_sync generate_asm hosttool_compile
 	$Q${MAKE} -C ${src_tree}/arch/${ARCH} -f ${src_tree}/arch/${ARCH}/scripts/Makefile
