--- a/arch/riscv/scripts/Makefile.earlybuild
+++ b/arch/riscv/scripts/Makefile.earlybuild
@@ -19,9 +19,11 @@ PHONY+=${sub-dirs}
 PHONY+= __all
 __all: built-in.a
 
+quiet_cmd_ar	= AR    $@
+cmd_ar		= ${LD} -r $^ -o $@
+
 built-in.a: ${cur-objs} ${sub-objs}
-	$Q${LD} -r $^ -o $@
-	@${ECHO} $(call QUIET_AR,$@)
+	$(call cmd,ar)
 
 %/built-in.a:%
 	@
@@ -29,13 +31,16 @@ built-in.a: ${cur-objs} ${sub-objs}
 ${sub-dirs}:
 	$Q${MAKE} -C $@ -f ${src_tree}/arch/${ARCH}/scripts/Makefile.earlybuild
 
-%.o:%.c
-	$Q${CC} ${CFLAGS_EXTRA} ${CFLAG_$(patsubst %.o,%,$@)} ${RV_CFLAGS} -Wp,-MD,.$@.d -c $< -o $@
-	@${ECHO} $(call QUIET_COMPILE,$@)
+quiet_cmd_cc	= CC    $@
+cmd_cc		= ${CC} ${CFLAGS_EXTRA} ${CFLAG_$(patsubst %.o,%,$@)} ${RV_CFLAGS} -Wp,-MD,.$@.d -c $< -o $@
 
+%.o:%.c
+	$(call cmd,cc)
+
+quiet_cmd_as	= AS    $@
+cmd_as		= ${AS} ${ASFLAGS_EXTRA} ${ASFLAG_$(patsubst %.o,%,$@)} ${RV_ASFLAGS} -c $< -o $@
 %.o:%.S
-	$Q${AS} ${ASFLAGS_EXTRA} ${ASFLAG_$(patsubst %.o,%,$@)} ${RV_ASFLAGS} -c $< -o $@
-	@${ECHO} $(call QUIET_ASMCOMPILE,$@)
+	$(call cmd,as)
 
 -include ${dep-fils}
 
