--- a/scripts/Makefile.build
+++ b/scripts/Makefile.build
@@ -16,12 +16,20 @@ sub-dirs := $(patsubst %/,%,$(filter %/,${obj-y}))
 sub-objs := $(foreach it,${sub-dirs},${it}/built-in.a)
 PHONY+=${sub-dirs}
 
+quiet_cmd_cc = CC    $@
+cmd_cc = ${CC} ${CFLAGS_EXTRA} ${CFLAG_$(patsubst %.o,%,$@)} ${CFLAGS} -Wp,-MD,.$@.d -c $< -o $@
+
+quiet_cmd_ar = AR    $@
+cmd_ar = ${LD} -r $^ -o $@
+
+quiet_cmd_as = AS    $@
+cmd_as = ${AS} ${ASFLAGS_EXTRA} ${ASFLAG_$(patsubst %.o,%,$@)} ${ASFLAGS} -c $< -o $@
+
 PHONY+= __all
 __all: built-in.a
 
 built-in.a: ${cur-objs} ${sub-objs}
-	$Q${LD} -r $^ -o $@
-	@${ECHO} $(call QUIET_AR,$@)
+	$(call cmd,ar)
 
 %/built-in.a:%
 	@
@@ -30,12 +38,10 @@ ${sub-dirs}:
 	$Q${MAKE} -C $@ -f ${src_tree}/scripts/Makefile.build
 
 %.o:%.c
-	$Q${CC} ${CFLAGS_EXTRA} ${CFLAG_$(patsubst %.o,%,$@)} ${CFLAGS} -Wp,-MD,.$@.d -c $< -o $@
-	@${ECHO} $(call QUIET_COMPILE,$@)
+	$(call cmd,cc)
 
 %.o:%.S
-	$Q${AS} ${ASFLAGS_EXTRA} ${ASFLAG_$(patsubst %.o,%,$@)} ${ASFLAGS} -c $< -o $@
-	@${ECHO} $(call QUIET_ASMCOMPILE,$@)
+	$(call cmd,as)
 
 -include ${dep-fils}
 
