--- a/scripts/Makefile.clean.generate
+++ b/scripts/Makefile.clean.generate
@@ -1,8 +1,9 @@
 include ${src_tree}/scripts/Makefile.include
 
+quiet_cmd_clean	= CLEAN GENERATED_UAPI_ASM
+cmd_clean	= ${RM} ${UAPI_ASM_DIR}
 clean:
-	$Q${RM} ${UAPI_ASM_DIR}
-	@${ECHO} $(call QUIET_CLEAN,GENERATED_UAPI_ASM)
+	$(call cmd,clean)
 
 
 .PHONY:clean
