--- a/scripts/Makefile.include
+++ b/scripts/Makefile.include
@@ -1,40 +1,4 @@
 
-define QUIET_CLEAN
-"	 CLEAN $1"
-endef
-
-define QUIET_OBJCOPY
-"	 OBJCP $1"
-endef
-
-define QUIET_OBJDUMP
-"	 OBJDP $1"
-endef
-
-define QUIET_DTC
-"	 DTC   $1"
-endef
-
-define QUIET_DISTCLEAN
-"	 CLEAN $1"
-endef
-
-define QUIET_COMPILE
-"	 CC    $1"
-endef
-
-define QUIET_AR
-"	 AR    $1"
-endef
-
-define QUIET_LINK
-"	 LD    $1"
-endef
-
-define QUIET_ASMCOMPILE
-"	 AS    $1"
-endef
-
-define QUIET_SYNC
-"	 SYNC  $1"
+define cmd
+  @$(if ${quiet},echo "         ${${quiet}cmd_$1}",echo "${cmd_$1}") && ${cmd_$1}
 endef
