--- a/arch/riscv/Makefile.arch
+++ b/arch/riscv/Makefile.arch
@@ -1,10 +1,10 @@
 
 CFLAGS  += -mcmodel=medany -I${src_tree}/arch/${ARCH}/include
-ASFLAGS += -I${src_tree}/arch/${ARCH}/include
-LDFLAGS += -T ${src_tree}/arch/${ARCH}/riscv.lds
+ASFLAGS += -mcmodel=medany -I${src_tree}/arch/${ARCH}/include
+LDFLAGS += -T ${src_tree}/arch/${ARCH}/riscv.lds --no-warn-rwx-segments -static
 BOARD_TARGET := ${src_tree}/arch/${ARCH}/Image
 export BOARD_TARGET
 
 PHONY += board_compile
-board_compile: kconfig_sync generate_asm hosttool_compile
+board_compile: kconfig_sync generate_asm hosttool_compile ${TARGET}
 	$Q${MAKE} -C ${src_tree}/arch/${ARCH} -f ${src_tree}/arch/${ARCH}/scripts/Makefile
