--- a/scripts/Makefile.build
+++ b/scripts/Makefile.build
@@ -1,4 +1,5 @@
 obj-y 		:= 
+obj-lds		:=
 PHONY 		:=
 CFLAGS_EXTRA	:=
 ASFLAGS_EXTRA	:=
@@ -11,6 +12,7 @@ include Makefile
 
 cur-objs := $(filter-out %/,${obj-y})
 dep-fils := $(patsubst %,.%.d,${cur-objs})
+dep-fils += $(patsubst %,.%.o.d,${obj-lds})
 
 sub-dirs := $(patsubst %/,%,$(filter %/,${obj-y}))
 sub-objs := $(foreach it,${sub-dirs},${it}/built-in.a)
@@ -20,15 +22,21 @@ quiet_cmd_cc = CC    $@
 cmd_cc = ${CC} ${CFLAGS_EXTRA} ${CFLAG_$(patsubst %.o,%,$@)} ${CFLAGS} -Wp,-MD,.$@.d -c $< -o $@
 
 quiet_cmd_ar = AR    $@
-cmd_ar = ${LD} -r $^ -o $@
+cmd_ar = ${LD} -r ${cur-objs} ${sub-objs} -o $@
 
 quiet_cmd_as = AS    $@
 cmd_as = ${AS} ${ASFLAGS_EXTRA} ${ASFLAG_$(patsubst %.o,%,$@)} ${ASFLAGS} -c $< -o $@
 
+quiet_cmd_cc_e 	= LDS   $@
+cmd_cc_e	= ${CC} ${CFLAGS_EXTRA} ${CFLAGS} ${CFLAG_$(patsubst %.lds,%_lds,$@)} -Wp,-MD,.$@.d -E $< -o $@
+
+quiet_cmd_cplds	= CP    LDS
+cmd_cplds	= ${CP} $< $@
+
 PHONY+= __all
 __all: built-in.a
 
-built-in.a: ${cur-objs} ${sub-objs}
+built-in.a: ${cur-objs} ${sub-objs} ${obj-lds}
 	$(call cmd,ar)
 
 %/built-in.a:%
@@ -39,6 +47,14 @@ ${sub-dirs}:
 
 %.o:%.c
 	$(call cmd,cc)
+
+%.lds:%.lds.o
+	$(call cmd,cplds)
+
+.PRECIOUS: %.lds.o
+
+%.lds.o:%.lds.S
+	$(call cmd,cc_e)
 
 %.o:%.S
 	$(call cmd,as)
