--- a/module/rttest/Makefile
+++ b/module/rttest/Makefile
@@ -2,3 +2,4 @@ obj-y += test_module.o
 obj-${CONFIG_TEST_HELLO} += hello_test.o
 obj-${CONFIG_TEST_LIBSTR} += lbstr_test.o
 obj-${CONFIG_TEST_INIT_SECTION} += init_section_test.o
+obj-${CONFIG_TEST_LIST_API} += list_test.o
