--- a/module/rttest/Makefile
+++ b/module/rttest/Makefile
@@ -3,3 +3,4 @@ obj-${CONFIG_TEST_HELLO} += hello_test.o
 obj-${CONFIG_TEST_LIBSTR} += lbstr_test.o
 obj-${CONFIG_TEST_INIT_SECTION} += init_section_test.o
 obj-${CONFIG_TEST_LIST_API} += list_test.o
+obj-${CONFIG_TEST_PAGE_API} += page_test.o
