--- a/module/rttest/Kconfig
+++ b/module/rttest/Kconfig
@@ -49,4 +49,31 @@ config TEST_PAGE_API
       if there is api/macro changed , remember
       to add/fix the test code
 
+config TEST_PGFM_API
+    prompt "pgfm api test"
+    def_bool y
+    depends on RTTEST
+    help
+      test all api/macro used in "mm/pageframe.h"
+      if there is api/macro changed, remember 
+      to add/fix the test code
+
+config TEST_CPU_API
+    prompt "cpu api test"
+    def_bool y
+    depends on RTTEST
+    help
+      test all api/macro used in "aco/cpu.h"
+      if there is api/macro changed, remember
+      to add/fix the test code
+
+config TEST_MEMBLOCK_API
+    prompt "memblock api test"
+    def_bool y
+    depends on RTTEST
+    help 
+      test all api/macro used in "mm/memblock_alloc.h"
+      if there is api/macro changed, remember
+      to add/fix the test code
+
 endmenu
