--- a/module/rttest/Makefile
+++ b/module/rttest/Makefile
@@ -7,3 +7,4 @@ obj-${CONFIG_TEST_PAGE_API} += page_test.o
 obj-${CONFIG_TEST_PGFM_API} += pgframe_test.o
 obj-${CONFIG_TEST_CPU_API} += cpu_test.o
 obj-${CONFIG_TEST_MEMBLOCK_API} += memblock_test.o
+obj-${CONFIG_TEST_BUDDY_API} += buddy_test.o
