--- a/module/rttest/Makefile
+++ b/module/rttest/Makefile
@@ -8,3 +8,7 @@ obj-${CONFIG_TEST_PGFM_API} += pgframe_test.o
 obj-${CONFIG_TEST_CPU_API} += cpu_test.o
 obj-${CONFIG_TEST_MEMBLOCK_API} += memblock_test.o
 obj-${CONFIG_TEST_BUDDY_API} += buddy_test.o
+obj-${CONFIG_TEST_ATOMIC_API} += atomic_test.o
+obj-${CONFIG_TEST_SPINLOCK_API} += spinlock_test.o
+obj-${CONFIG_TEST_RWLOCK_API} += rwlock_test.o
+
